--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "akeyless-custom-server-ui-rotate",
   "version": "1.0.0",
   "description": "Automating the process of rotating credentials on a website using the Akeyless Custom Rotator",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,8 +20,10 @@
   "dependencies": {
     "@puppeteer/replay": "^3.0.0",
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "generate-password": "^1.7.1",
-    "puppeteer": "^22.13.1"
+    "puppeteer": "^22.13.1",
+    "winston": "^3.13.1"
   }
 }
